--- a/index.html
+++ b/index.html
@@ -578,13 +578,16 @@
     <section id="try-free-class" class="try-free-class">
       <h2>TRY A FREE CLASS</h2>
       <p>By filling out the form completely, you will receive membership information in your email.</p>
-     <form action="mailto:gritcitybjj@gmail.com" method="POST" enctype="text/plain">
-  <input type="text" name="Name" placeholder="Name (required)" required />
-  <input type="email" name="Email" placeholder="Email (required)" required />
-  <input type="tel" name="Phone" placeholder="Phone (optional)" />
-  <textarea name="Message" placeholder="Questions or Comments (optional)" rows="4"></textarea>
-  <button type="submit">Submit</button>
+     <form action="mailto:gritcitybjj@gmail.com" method="POST" enctype="text/plain" style="display:flex;flex-direction:column;gap:14px;max-width:410px;margin:0 auto;">
+  <input type="text" name="Name" placeholder="Name (required)" required style="padding:11px 12px;font-size:1em;border:1.2px solid #c9d3f7;border-radius:7px;"/>
+  <input type="email" name="Email" placeholder="Email (required)" required style="padding:11px 12px;font-size:1em;border:1.2px solid #c9d3f7;border-radius:7px;"/>
+  <input type="tel" name="Phone" placeholder="Phone (optional)" style="padding:11px 12px;font-size:1em;border:1.2px solid #c9d3f7;border-radius:7px;"/>
+  <textarea name="Message" placeholder="Questions or Comments (optional)" rows="4" style="padding:11px 12px;font-size:1em;border:1.2px solid #c9d3f7;border-radius:7px;"></textarea>
+  <button type="submit" style="background:#14307f;color:#fff;padding:12px 0;font-size:1.1em;border:none;border-radius:7px;cursor:pointer;font-weight:700;letter-spacing:1px;transition:background 0.17s;">
+    Submit
+  </button>
 </form>
+
 
       <div style="margin-top: 8px; font-size: 0.95em; color: #888;">
         Or call us at
