--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
         <img src="instagram.png" alt="Instagram" />
       </a>
       <a href="https://x.com/gritcitybjj" target="_blank" title="𝕏" rel="noopener noreferrer">
-        <img src="x.png" alt="𝕏" style="background:#000;" />
+        <img src="𝕏.png" alt="𝕏" style="background:#000;" />
       </a>
       <a href="https://www.facebook.com/gritcitybjj" target="_blank" title="Facebook" rel="noopener noreferrer">
         <img src="facebook.png" alt="Facebook" />
