--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
       <h3>Professor Michael Proctor</h3>
       <p class="bio-short">Michael Proctor is a Marcello Monteiro protégé who began his career under Lotus Club Jiu-Jitsu...</p>
       <p class="bio-full" style="display:none;">
-        Michael Proctor is a <strong>3rd Degree Black Belt</strong> under Marcello C. Monteiro. With over a decade of experience, he has dedicated his teaching to building a strong community and providing clear, effective instruction for both beginners and advanced students. Michael believes in empowering each student to reach their potential, on and off the mats.
+        Michael Proctor is a <strong>3rd Degree Black Belt</strong> under Marcello C. Monteiro. With over two decades of experience, he has dedicated his teaching to building a strong community and providing clear, effective instruction for both beginners and advanced students. Michael believes in empowering each student to reach their potential, on and off the mats.
       </p>
       <button class="read-more-btn" onclick="toggleBio(this)">Read More</button>
     </div>
