--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
       <h3>Professor Marcello C Monteiro</h3>
       <p class="bio-short">Master Monteiro is well known in Brazil as a teacher and coach for creating fighting strategies...</p>
       <p class="bio-full" style="display:none;">
-        Marcello C. Monteiro is recognized worldwide for his advanced and detailed instruction. He’s a certified 5th Degree Black Belt under the legendary Ricardo de la Riva and has produced numerous champions. His systematic approach breaks down complex techniques for students at all levels, building the foundation for a successful jiu-jitsu journey.
+        Marcello C. Monteiro is recognized worldwide for his advanced and detailed instruction. He’s a certified <strong>6th Degree Black Belt</strong> under the legendary Ricardo de la Riva and has produced numerous champions. His systematic approach breaks down complex techniques for students at all levels, building the foundation for a successful jiu-jitsu journey.
       </p>
       <button class="read-more-btn" onclick="toggleBio(this)">Read More</button>
     </div>
@@ -495,7 +495,7 @@
       <h3>Professor David Gines</h3>
       <p class="bio-short">2nd Degree Black Belt under Michael Proctor & Marcello C. Monteiro.</p>
       <p class="bio-full" style="display:none;">
-        David Gines has trained under both Michael Proctor and Marcello C. Monteiro, earning his 2nd Degree Black Belt. He specializes in breaking down techniques for all ages and is passionate about helping students set and reach their martial arts and fitness goals.
+        David Gines has trained under both Michael Proctor and Marcello C. Monteiro, earning his <strong>2nd Degree Black Belt</strong>. He specializes in breaking down techniques for all ages and is passionate about helping students set and reach their martial arts and fitness goals.
       </p>
       <button class="read-more-btn" onclick="toggleBio(this)">Read More</button>
     </div>
