--- a/index.html
+++ b/index.html
@@ -421,14 +421,10 @@
       <div class="section-title">Location</div>
       <div class="address-text">3635 S Lawrence St, STE G, Tacoma, WA 98409</div>
       <div class="location-text">We are located right next door to Flags A' Flyin on S 38th & Lawrence</div>
-      <div class="location-maps">
-        <a href="cedar_plaza_location.jpg" target="_blank" rel="noopener noreferrer">
-          <img src="cedar_plaza_location.jpg" alt="Tacoma Cedar Plaza Map" />
-        </a>
-        <a href="cedar_plaza_building_d.jpg" target="_blank" rel="noopener noreferrer">
-          <img src="cedar_plaza_building_d.jpg" alt="Cedar Plaza Building D" />
-        </a>
-      </div>
+<div class="location-maps">
+  <img src="cedar_plaza_location.jpg" alt="Tacoma Cedar Plaza Map" onclick="openImgPopup(this)" style="cursor:pointer;" />
+  <img src="cedar_plaza_building_d.jpg" alt="Cedar Plaza Building D" onclick="openImgPopup(this)" style="cursor:pointer;" />
+</div>
       <div class="location-map-link">
         <a href="https://maps.app.goo.gl/debgQ8w2XD5YwNJ9A" target="_blank" rel="noopener noreferrer">Open live directions map</a>
       </div>
